// Vitest Snapshot v1

exports[`auto scan deps in single project 1`] = `
"╔════════════════════════════════════════════════════════════════════════╗
║                              Scan Results                              ║
╟──────────────────┬──────────┬────────────┬───────────────┬─────────────╢
║ Name             │ MIN      │ MIN + GZIP │ SLOW 3G       │ EMERGING 4G ║
╟──────────────────┼──────────┼────────────┼───────────────┼─────────────╢
║ react@18.2.0     │ 6.43kB   │ 2.51kB     │ 50ms          │ 3ms         ║
╟──────────────────┼──────────┼────────────┼───────────────┼─────────────╢
║ react-dom@18.2.0 │ 130.48kB │ 41.99kB    │ 0.8398046875s │ 48ms        ║
╟──────────────────┼──────────┼────────────┼───────────────┼─────────────╢
║ classnames@2.3.2 │ 717.00B  │ 431.00B    │ 8ms           │ 481μs       ║
╚══════════════════╧══════════╧════════════╧═══════════════╧═════════════╝
 
"
`;

exports[`recursive scan deps in pnpm workspaces 1`] = `
"╔═════════════════════════════════════════════════════════════════════╗
║                            Scan Results                             ║
╟──────────────────────┬─────────┬────────────┬─────────┬─────────────╢
║ Name                 │ MIN     │ MIN + GZIP │ SLOW 3G │ EMERGING 4G ║
╟──────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ react-intl@6.2.8     │ 62.89kB │ 17.79kB    │ 356ms   │ 20ms        ║
╟──────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ react-i18next@12.1.5 │ 23.32kB │ 7.08kB     │ 142ms   │ 8ms         ║
╟──────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ eo-locale@7.4.2      │ 5.17kB  │ 1.79kB     │ 36ms    │ 2ms         ║
╚══════════════════════╧═════════╧════════════╧═════════╧═════════════╝
 
╔══════════════════════════════════════════════════════════════════════════════════════╗
║                                     Scan Results                                     ║
╟───────────────────────────────┬──────────┬────────────┬────────────────┬─────────────╢
║ Name                          │ MIN      │ MIN + GZIP │ SLOW 3G        │ EMERGING 4G ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ lodash@4.17.21                │ 69.89kB  │ 24.47kB    │ 489ms          │ 28ms        ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ axios@0.27.2                  │ 19.20kB  │ 6.74kB     │ 135ms          │ 8ms         ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ axios-ntlm@1.3.0              │ 28.22kB  │ 9.68kB     │ 194ms          │ 11ms        ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ badge-maker@3.3.1             │ 903.43kB │ 286.25kB   │ 5.72494140625s │ 327ms       ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ bcryptjs@2.4.3                │ 21.24kB  │ 9.59kB     │ 192ms          │ 11ms        ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ bree@7.1.5                    │ 157.03kB │ 45.99kB    │ 0.91970703125s │ 53ms        ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ cacheable-lookup@6.0.4        │ 4.90kB   │ 1.92kB     │ 38ms           │ 2ms         ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ chardet@1.4.0                 │ 35.13kB  │ 9.64kB     │ 193ms          │ 11ms        ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ check-password-strength@2.0.7 │ 1.03kB   │ 592.00B    │ 12ms           │ 1ms         ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ dayjs@1.11.7                  │ 6.46kB   │ 2.88kB     │ 58ms           │ 3ms         ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ form-data@4.0.0               │ 203.00B  │ 169.00B    │ 3ms            │ 189μs       ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ gamedig@4.0.6                 │ 290.95kB │ 161.08kB   │ 3.221640625s   │ 184ms       ║
╚═══════════════════════════════╧══════════╧════════════╧════════════════╧═════════════╝
 
╔══════════════════════════════════════════════════════════════════════╗
║                             Scan Results                             ║
╟───────────────────────┬─────────┬────────────┬─────────┬─────────────╢
║ Name                  │ MIN     │ MIN + GZIP │ SLOW 3G │ EMERGING 4G ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ lodash@4.17.21        │ 69.89kB │ 24.47kB    │ 489ms   │ 28ms        ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ axios@0.27.2          │ 19.20kB │ 6.74kB     │ 135ms   │ 8ms         ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ axios-ntlm@1.3.0      │ 28.22kB │ 9.68kB     │ 194ms   │ 11ms        ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ react-dropzone@7.0.1  │ 16.99kB │ 5.72kB     │ 114ms   │ 7ms         ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ react-flip-move@3.0.5 │ 14.89kB │ 4.84kB     │ 97ms    │ 6ms         ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ react-sidebar@3.0.2   │ 7.46kB  │ 2.38kB     │ 48ms    │ 3ms         ║
╚═══════════════════════╧═════════╧════════════╧═════════╧═════════════╝
 
"
`;

exports[`recursive scan deps in yarn workspaces 1`] = `
"Warn:  No Packages to scan in project: /Users/zhenwei.song/Documents/projects/dep-bundle-size/test/fixtures/yarn-workspace
╔══════════════════════════════════════════════════════════════════════════════════════╗
║                                     Scan Results                                     ║
╟───────────────────────────────┬──────────┬────────────┬────────────────┬─────────────╢
║ Name                          │ MIN      │ MIN + GZIP │ SLOW 3G        │ EMERGING 4G ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ lodash@4.17.21                │ 69.89kB  │ 24.47kB    │ 489ms          │ 28ms        ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ axios@0.27.2                  │ 19.20kB  │ 6.74kB     │ 135ms          │ 8ms         ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ axios-ntlm@1.3.0              │ 28.22kB  │ 9.68kB     │ 194ms          │ 11ms        ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ badge-maker@3.3.1             │ 903.43kB │ 286.25kB   │ 5.72494140625s │ 327ms       ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ bcryptjs@2.4.3                │ 21.24kB  │ 9.59kB     │ 192ms          │ 11ms        ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ bree@7.1.5                    │ 157.03kB │ 45.99kB    │ 0.91970703125s │ 53ms        ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ cacheable-lookup@6.0.4        │ 4.90kB   │ 1.92kB     │ 38ms           │ 2ms         ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ chardet@1.4.0                 │ 35.13kB  │ 9.64kB     │ 193ms          │ 11ms        ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ check-password-strength@2.0.7 │ 1.03kB   │ 592.00B    │ 12ms           │ 1ms         ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ dayjs@1.11.7                  │ 6.46kB   │ 2.88kB     │ 58ms           │ 3ms         ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ form-data@4.0.0               │ 203.00B  │ 169.00B    │ 3ms            │ 189μs       ║
╟───────────────────────────────┼──────────┼────────────┼────────────────┼─────────────╢
║ gamedig@4.0.6                 │ 290.95kB │ 161.08kB   │ 3.221640625s   │ 184ms       ║
╚═══════════════════════════════╧══════════╧════════════╧════════════════╧═════════════╝
 
╔══════════════════════════════════════════════════════════════════════╗
║                             Scan Results                             ║
╟───────────────────────┬─────────┬────────────┬─────────┬─────────────╢
║ Name                  │ MIN     │ MIN + GZIP │ SLOW 3G │ EMERGING 4G ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ lodash@3.10.1         │ 49.84kB │ 18.24kB    │ 365ms   │ 21ms        ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ axios@0.27.2          │ 19.20kB │ 6.74kB     │ 135ms   │ 8ms         ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ axios-ntlm@1.3.0      │ 28.22kB │ 9.68kB     │ 194ms   │ 11ms        ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ react-dropzone@7.0.1  │ 16.99kB │ 5.72kB     │ 114ms   │ 7ms         ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ react-flip-move@3.0.5 │ 14.89kB │ 4.84kB     │ 97ms    │ 6ms         ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ react-sidebar@3.0.2   │ 7.46kB  │ 2.38kB     │ 48ms    │ 3ms         ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ react-intl@6.2.8      │ 62.89kB │ 17.79kB    │ 356ms   │ 20ms        ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ react-i18next@12.1.5  │ 23.32kB │ 7.08kB     │ 142ms   │ 8ms         ║
╟───────────────────────┼─────────┼────────────┼─────────┼─────────────╢
║ eo-locale@7.4.2       │ 5.17kB  │ 1.79kB     │ 36ms    │ 2ms         ║
╚═══════════════════════╧═════════╧════════════╧═════════╧═════════════╝
 
Warn:  No Packages to scan in project: /Users/zhenwei.song/Documents/projects/dep-bundle-size/test/fixtures/yarn-workspace/packages/zoo
Warn:  No Packages to scan in project: /Users/zhenwei.song/Documents/projects/dep-bundle-size/test/fixtures/yarn-workspace/apps/native/lib
"
`;

exports[`specify packages to scan in all packages 1`] = `
"Warn:  Can not get installed version of package react, use version listed in package.json or latest instead
Warn:  Can not get installed version of package dayjs, use version listed in package.json or latest instead
╔════════════════════════════════════════════════════════════╗
║                        Scan Results                        ║
╟──────────────┬────────┬────────────┬─────────┬─────────────╢
║ Name         │ MIN    │ MIN + GZIP │ SLOW 3G │ EMERGING 4G ║
╟──────────────┼────────┼────────────┼─────────┼─────────────╢
║ react@18.2.0 │ 6.43kB │ 2.51kB     │ 50ms    │ 3ms         ║
╟──────────────┼────────┼────────────┼─────────┼─────────────╢
║ dayjs@1.11.7 │ 6.46kB │ 2.88kB     │ 58ms    │ 3ms         ║
╚══════════════╧════════╧════════════╧═════════╧═════════════╝
 
Warn:  Can not get installed version of package react, use version listed in package.json or latest instead
╔════════════════════════════════════════════════════════════╗
║                        Scan Results                        ║
╟──────────────┬────────┬────────────┬─────────┬─────────────╢
║ Name         │ MIN    │ MIN + GZIP │ SLOW 3G │ EMERGING 4G ║
╟──────────────┼────────┼────────────┼─────────┼─────────────╢
║ react@18.2.0 │ 6.43kB │ 2.51kB     │ 50ms    │ 3ms         ║
╟──────────────┼────────┼────────────┼─────────┼─────────────╢
║ dayjs@1.11.7 │ 6.46kB │ 2.88kB     │ 58ms    │ 3ms         ║
╚══════════════╧════════╧════════════╧═════════╧═════════════╝
 
Warn:  Can not get installed version of package react, use version listed in package.json or latest instead
Warn:  Can not get installed version of package dayjs, use version listed in package.json or latest instead
╔════════════════════════════════════════════════════════════╗
║                        Scan Results                        ║
╟──────────────┬────────┬────────────┬─────────┬─────────────╢
║ Name         │ MIN    │ MIN + GZIP │ SLOW 3G │ EMERGING 4G ║
╟──────────────┼────────┼────────────┼─────────┼─────────────╢
║ react@18.2.0 │ 6.43kB │ 2.51kB     │ 50ms    │ 3ms         ║
╟──────────────┼────────┼────────────┼─────────┼─────────────╢
║ dayjs@1.11.7 │ 6.46kB │ 2.88kB     │ 58ms    │ 3ms         ║
╚══════════════╧════════╧════════════╧═════════╧═════════════╝
 
"
`;

exports[`specify packages to scan in single project 1`] = `
"Warn:  Can not get installed version of package dayjs, use version listed in package.json or latest instead
╔════════════════════════════════════════════════════════════╗
║                        Scan Results                        ║
╟──────────────┬────────┬────────────┬─────────┬─────────────╢
║ Name         │ MIN    │ MIN + GZIP │ SLOW 3G │ EMERGING 4G ║
╟──────────────┼────────┼────────────┼─────────┼─────────────╢
║ react@18.2.0 │ 6.43kB │ 2.51kB     │ 50ms    │ 3ms         ║
╟──────────────┼────────┼────────────┼─────────┼─────────────╢
║ dayjs@1.11.7 │ 6.46kB │ 2.88kB     │ 58ms    │ 3ms         ║
╚══════════════╧════════╧════════════╧═════════╧═════════════╝
 
"
`;
